syntax = "proto3";

package kogo;

service Activity {
    rpc GetBooks (BooksRequest) returns (stream Book) {}
    rpc GetBookCount (BookCountRequest) returns (BookCountResponse) {}
    rpc BackupDatabase (BackupDatabaseRequest) returns (BackupDatabaseResponse) {}
    rpc OfflineSetup (OfflineSetupRequest) returns (OfflineSetupResponse) {}
    rpc GetUsers (GetUsersRequest) returns (stream User) {}
    rpc GetDatabaseVersion (GetDatabaseVersionRequest) returns (DatabaseVersionResponse)
}

message BooksRequest {
    bool showOnlyRead = 1;
}

message BookCountRequest {}

message BookCountResponse {
    int32 Count = 1;
}

message BackupDatabaseRequest {
    string Path = 1;
}

message BackupDatabaseResponse {
    bool Success = 1;
}

message OfflineSetupRequest {
    bool OverwriteExistingUser = 1;
}

message OfflineSetupResponse {
    bool Success = 1;
    bool ExistingUserPresent = 2;
}

message GetUsersRequest {}

message GetDatabaseVersionRequest {}

message DatabaseVersionResponse {
    string version = 1;
}

message Book {
    string Title = 1;
    string Author = 2;
    int32 TimeSpentReading = 3;
    int32 PercentRead = 4;
}

message User {
    string Id = 1;
    string DisplayName = 2;
    string Email = 3;
    string DeviceId = 4;
    bool HasMadePurchase = 5;
}